Linking js file.

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
-	"manifest_version": 2,
-
-	"name": "Bass Monkey",
-	"description": "View your bookmarks in lists, just like a bass monkey does.",
-	"version": "0.1",
-
-	"permissions": [
-		"bookmarks",
-		"tabs"
-	],
-	"browser_action": {
-		"default_icon": "images/icon.png",
-		"default_popup": "popup.html"
-	}
+  "manifest_version": 2,
+  "name": "Bass Monkey",
+  "description": "View your bookmarks in lists, just like a bass monkey does.",
+  "version": "0.1",
+  "permissions": [
+    "bookmarks",
+    "tabs"
+  ],
+  "browser_action": {
+    "default_icon": "images/icon.png",
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["js/popup.js"]
+  }
 }
